added route for fetching department Icon
