# swagger_output.json
@@ -1384,6 +1384,33 @@
         }
       }
     },
+    "/admin/getDepartmentProfilePic/{departmentId}": {
+      "get": {
+        "tags": [
+          "Admin"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "departmentId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "502": {
+            "description": "Bad Gateway"
+          }
+        }
+      }
+    },
     "/admin/getDepartments": {
       "get": {
         "tags": [
